# swagger.yaml
@@ -388,6 +388,7 @@ paths:
         500:
           description: "Some error"
           example: { status: 500, message: "Some error message", data: null }
+
   /users/{user_id}:
     get:
       tags:
@@ -431,7 +432,8 @@ paths:
         500:
           description: "Some error"
           example: { status: 500, message: "Some error message", data: null }
-      patch:
+
+    patch:
       tags:
         - Users
       summary: Update a user thanks to his Id
@@ -445,19 +447,62 @@ paths:
           description: Id of the requested user
           required: true
           type: string
+        - name: name
+          in: body
+          description: User name
+          type: string
+        - name: first_name
+          in: body
+          description: User first name
+          type: string
+        - name: picture_url
+          in: body
+          description: Picture url
+          type: string
+        - name: email
+          in: body
+          description: User email
+          type: string
+        - name: password
+          in: body
+          description: User password
+          type: string
       responses:
         200:
           description: "User Exist"
-          example: { status: 200, message: "Success", data: [ { "first_name": "Rachid", "id": "tl74u106eo", "name": "Soussi", "picture_url": "/url/2", "role": "Marchand", "uid": "dsfgjydsfkvj" } ] }
+          example: { status: 200, message: "Success", data: [ "auth": { "email": "poulet_t@etna-alternance.net"},"user": { "id": "fwes63jrga","uid": "QbZSUqWh5hVIxKdHWTmrOl2iZQt1","first_name": "poulet_t","name": "poulet_t","picture_url": null,"role": 1} ] }
         400:
           description: "Bad request"
           example: { status: 400, message: "Some error message", data: null }
         404:
           description: "User not found"
           example: { status: 404, message: "User XXXX not found", data: null }
-        500:
-          description: "Some error"
-          example: { status: 500, message: "Some error message", data: null }
+
+    delete:
+      tags:
+        - Users
+      summary: Delete a user thanks to his Id
+      description: 'Used to delete a user'
+      operationId: deleteUser
+      produces:
+        - application/json
+      parameters:
+        - name: user_id
+          in: path
+          description: Id of the requested user
+          required: true
+          type: string
+      responses:
+        200:
+          description: "User Exist"
+          example: { status: 200, message: "Success", data: { "status": 200, "message": "User ig1mb20yvf successfully deleted", "data": null } }
+        400:
+          description: "Bad request"
+          example: { status: 400, message: "Some error message", data: null }
+        404:
+          description: "User not found"
+          example: { status: 404, message: "User XXXX not found", data: null }
+
   /products/{product_id}/pictures:
     post:
       tags:
